2003-09-01  Matti Aarnio  <mea@zmailer.org>

	* scheduler/prototypes.h:
	    Change 'const char *log;' to 'const char *logfn;'

	* utils/perl/Makefile.in:
	    Deeper study of what to do in perl module compilation.
	    Now  "make install DESTDIR=.." parameter should have
	    real effect.

	* transports/libta/ctlopen.c:
	    One test of  ta_use_mmap  was slightly wrong, and
	    end result was faulty  let_buffer()  initialization.

2003-08-29  Matti Aarnio  <mea@zmailer.org>

	* debian/*
	    Debian packet builder scripts from 
	    Xose Vazquez Perez <xose@wanadoo.es>

	* include/libz.h, lib/zgetbindaddr.c, scheduler/transport.c,
	  smtpserver/smtpserver.c, smtpserver/smtpserver.h,
	  smtpserver/cfgread.c, transports/smtp/smtp.c:
	    Added third parameter into  zgetbindaddr()  function,
	    namely: what address family should be used ?
	    Entry parameter is: AF_INET / AF_INET6 (0 == AF_INET)
	    That is needed for  "iface:..." binding mode.

	* utils/smtpserver-log-parser.pl.in:
	    Found a bug in the 'pid-parser', changed the RE patterns,
	    and system that formerly leaked a lot of memory does now
	    only a little bit..

	* man/scheduler.8.in:
	    Fixed a typo in  PARAMauthfile= document.

	* proto/smtpserver.conf.in:
	    Documentary comment changes in the end of the file
	    in the 'style-flags' section.

2003-08-28  Matti Aarnio  <mea@zmailer.org>

	* man/Makefile.in, SiteConfig.in, man/zmailer-conf-generate.pl,
	  man/mailq-m-generate-pl:
	    New generator (zmailer.conf.5zm), and typo fix in the old.
	    Also source changes in SiteConfig.in  which is used as
	    input for the  zmailer.conf.5zm  file.

	* configure.in, transports/libta/ctlopen.c, SiteConfig.in:
	    Change the  --with-ta-mmap  to control what  SiteConfig
	    file (and thus  zmailer.conf  file) gets about TA_USE_MMAP=
	    variable value.

	* man/*:
	    Massive rework of man-pages; all cross-references will
	    be using suffix names like:  (8zm).  Man-sections got