@@ -1,3 +1,12 @@
+2003-09-02  Matti Aarnio  <mea@zmailer.org>
+
+	* transports/smtp/appendlet.c:
+	    Oops, readalready processing bug.
+
+	* transports/sm/sm.c, transports/mailbox/mailbox.c:
+	    Code rearrangements during verification job that
+	    similar bugs don't exist as in appendlet..
+
 2003-09-01  Matti Aarnio  <mea@zmailer.org>
 
 	* scheduler/prototypes.h:
@@ -6,7 +15,7 @@
 	* utils/perl/Makefile.in:
 	    Deeper study of what to do in perl module compilation.
 	    Now  "make install DESTDIR=.." parameter should have
-	    real effect.
+	    real effect in the underlying  Makefile.PL  files.
 
 	* transports/libta/ctlopen.c:
 	    One test of  ta_use_mmap  was slightly wrong, and
